--- a/src/pages/css/Home.css
+++ b/src/pages/css/Home.css
@@ -14,21 +14,15 @@
   width: 100%;
   background-color: rgba(0, 0, 0, 0.5);
 }
-.card-body {
-  display: flex;
-  flex-direction: column;
-}
-.card-body button {
-  margin-top: auto;
-}
 .card-img-top {
-  height: 300px;
+  height: 300px !important;
   object-fit: cover;
 }
-.card {
-  height: 100% !important;
+.card-testimony {
+  height: 250px;
 }
-.category-box {
-  border: 2px solid #ccc;
-  text-align: center;
+.text-testimony {
+  text-decoration: underline;
+}
+.text-category {
 }
