--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Mulish:wght@500&display=swap");
 body {
-  /* background-image: url("https://i.pinimg.com/736x/a2/b3/34/a2b334f71de71b1146cd32bd33fb9579.jpg"); */
+  background-color: #f1f7ed;
   background-position: center;
   background-size: cover;
   background-attachment: fixed;
